--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
-    compile 'com.firebase:firebase-client-android:2.5.1+'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.firebase:firebase-client-android:2.5.1'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
