--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
